linking PD_model with MCMC; for compilation generalUtils can be found in my wizmer/ams github

--- a/mcmc/Makefile
+++ b/mcmc/Makefile
@@ -1,18 +1,17 @@
-all: read mcmc
-
 INCLUDE=-I${HOME}/utils/include
 AMSSTATICLIBS := -L$(AMSWD)/lib/linuxx8664gcc5.34 -lntuple_slc6_PG
-LIBS=`root-config --cflags --libs ` -L${HOME}/utils/lib -lRootUtils 
-mcmc:
-	g++ -g ${INCLUDE} mcmc.cpp -o main -std=c++11
+LIBS=`root-config --cflags --libs ` -L${HOME}/utils/lib -lGeneralUtils
+OPTIMIZATION=-g
+mcmc:	mcmc.cpp pd_model.o
+	g++ ${OPTIMIZATION} ${INCLUDE} mcmc.cpp -o mcmc -std=c++11 ${LIBS} pd_model.o
 
 read:
-	g++ -g ${INCLUDE} reader.cpp -o reader  ${LIBS} $(AMSSTATICLIBS)
+	g++ ${OPTIMIZATION} ${INCLUDE} reader.cpp -o reader  ${LIBS} -lRootUtils $(AMSSTATICLIBS) 
 
 pd_model.o: pd_model.cpp  pd_model.hpp
-	g++ -c pd_model.cpp -std=c++11 
+	g++ ${OPTIMIZATION} -c pd_model.cpp -std=c++11 
 
 
 clean:
-	rm -f main reader
+	rm -f mcmc reader pd_model.o
 
