--- a/mcmc/Makefile
+++ b/mcmc/Makefile
@@ -1,18 +1,19 @@
-INCLUDE=-I./utils
+INCLUDE=-I./utils -I$(amsUtils)/include -I.
 AMSSTATICLIBS := -L$(AMSWD)/lib/linuxx8664gcc5.34 -lntuple_slc6_PG
-LIBS=`root-config --cflags --libs | sed 's/-lPhysics//g' | sed 's/-lGraf3d//g' | sed 's/-lPostscript//g' ` 
+LIBS=`root-config --cflags --libs | sed 's/-lPhysics//g' | sed 's/-lGraf3d//g' | sed 's/-lPostscript//g' `  -L$(amsUtils)/lib
+#LIBS=`root-config --cflags --libs`
 OPTIMIZATION=-O3
 
 all: mcmc reader test_model test_matrix
 
-mcmc:	mcmc.cpp pd_model.o generalUtils.o
-	g++ ${OPTIMIZATION} ${INCLUDE} $^ -o mcmc -std=c++11 
+mcmc:	mcmc.cpp pd_model.o 
+	g++ ${OPTIMIZATION} ${INCLUDE} $(LIBS) $^ -o mcmc -std=c++11 -lGeneralUtils
 
 reader:	reader.cpp
-	g++ ${OPTIMIZATION} -std=c++11  -I${amsUtils}/include -L${amsUtils}/lib ${INCLUDE} reader.cpp -o reader  ${LIBS} -lRootUtils  -lStack -lGeneralUtils
+	g++ ${OPTIMIZATION} -std=c++11  -L${amsUtils}/lib ${INCLUDE} reader.cpp -o reader  ${LIBS} -lRootUtils  -lStack -lGeneralUtils
 
-generalUtils.o: utils/generalUtils.cpp utils/generalUtils.hpp 
-	g++ ${OPTIMIZATION} ${INCLUDE} -c $< -std=c++11 
+# generalUtils.o: utils/generalUtils.cpp utils/generalUtils.hpp 
+# 	g++ ${OPTIMIZATION} ${INCLUDE} -c $< -std=c++11 
 
 pd_model.o: pd_model.cpp  pd_model.hpp
 	g++ ${OPTIMIZATION} ${INCLUDE} -c $< -std=c++11 
