adding exposure time snippet

--- a/mcmc/Makefile
+++ b/mcmc/Makefile
@@ -2,7 +2,7 @@ INCLUDE=-I./utils -I$(amsUtils)/include -I.
 AMSSTATICLIBS := -L$(AMSWD)/lib/linuxx8664gcc5.34 -lntuple_slc6_PG
 LIBS=`root-config --cflags --libs | sed 's/-lPhysics//g' | sed 's/-lGraf3d//g' | sed 's/-lPostscript//g' `  -L$(amsUtils)/lib
 #LIBS=`root-config --cflags --libs`
-OPTIMIZATION=-g
+OPTIMIZATION=-O3
 CXXFLAGS=-Wall -Weffc++ -pedantic -Wno-sign-compare \
     -pedantic-errors -Wextra -Wcast-align \
     -Wcast-qual  -Wchar-subscripts  -Wcomment \
